heading now redirects to home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,11 @@
             text-align: center;
         }
 
+        .link {
+            text-decoration: none;
+            color: black;
+        }
+
         audio {
             filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%);
             width: 200px;
@@ -31,7 +36,7 @@
 </head>
 <body>
 <div class="container my-3">
-    <h1>Dictionary</h1>
+    <h1><a class="link" href="/">Dictionary</a></h1>
     <br>
     <form method="POST">
         <div class="input-group mb-3">
