--- a/templates/wordnotfound.html
+++ b/templates/wordnotfound.html
@@ -1,21 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title>Definition not found</title>
-</head>
-<body>
-    
-    <div class="container">
-        <h1 style="text-align: center;">**WORD NOT FOUND**</h1>
-        <h3 style="text-align: center;">Sorry, but the API didn't return any definitions. Either the word is misspelled or the word doesn't exist in the dictionary.</h3>
-        <div style="text-align: center;">
-            <a href="/">Click here to return to main page.</a>
-        </div>
-    </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-</body>
-</html>
+{% extends "index.html" %}
+{% block content %}
+    <h1 style="text-align: center;">**WORD NOT FOUND**</h1>
+    <h3 style="text-align: center;">Sorry, but the API didn't return any definitions. Either the word is misspelled or
+        the word doesn't exist in the dictionary.</h3>
+{% endblock %}
