rename index.html > base.html

--- a/templates/wordnotfound.html
+++ b/templates/wordnotfound.html
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 {% block content %}
     <h1 style="text-align: center;">**WORD NOT FOUND**</h1>
     <h3 style="text-align: center;">Sorry, but the API didn't return any definitions. Either the word is misspelled or
