--- a/templates/base.html
+++ b/templates/base.html
@@ -4,20 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/142f9ce8c5.js" crossorigin="anonymous"></script>
-    <title>{{ name }}</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+        function sugg() {
+            document.getElementById('suggs').innerHTML = '';
+
+            var term = document.getElementById("searchValue").value;
+
+            var url = "https://api.datamuse.com/sug?s="+term.trim();
+
+            $.getJSON(url, function(data) {
+                for (i = 0; i < data.length; i = i+1) {
+                    var sugs = data[i].word;
+                    document.getElementById("suggs").innerHTML+='<option value="'+data[i].word+'"/>'
+            }
+            });
+        }
+    </script>
+
+    <title>Dictionary</title>
 
     <style>
-        .df h2:first-of-type {
-            float: left;
-        }
-
-        .df h4:last-of-type {
-            float: right;
-        }
-
         h1 {
             text-align: center;
         }
@@ -27,10 +38,18 @@
             color: black;
         }
 
-        audio {
-            filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%);
-            width: 200px;
-            height: 25px;
+        .div {
+            width: 80%;
+            height: 450px;
+            border: 35px solid #c4c4c4;
+            margin: auto;
+            border-radius: 15px;
+            background-color: #c4c4c4;
+            text-align: left;
+            }
+
+        body {
+            font-family: "Inter", sans-serif;
         }
     </style>
 </head>
@@ -40,8 +59,10 @@
     <br>
     <form method="POST">
         <div class="input-group mb-3">
-            <input type="text" class="form-control" style="border-radius: 5px;" placeholder="Type here"
-                   aria-label="Type here" name="text">
+            <input list="suggs" type="text" class="form-control" style="border-radius: 5px;" placeholder="Type here"
+                   aria-label="Type here" name="text" id="searchValue" oninput="sugg()">
+            <datalist id="suggs">
+            </datalist>
             &nbsp
             <div class="input-group-append">
                 <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Search</button>
@@ -50,6 +71,7 @@
     </form>
     <br>
     {% block content %}
+    <h3>Note: this website's word suggestion functionality doesn't work properly with Firefox and some mobile browsers.</h3>
     {% endblock %}
 </div>
 
