--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
 </head>
 <body>
 <div class="container my-3">
-    <h1><a class="link" href="/">Dictionary</a></h1>
+    <h1><a class="link" href="/">SimplyVocab</a></h1>
     <br>
     <form method="POST">
         <div class="input-group mb-3">
